Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Badge__c/Badge__c.object-meta.xml
<CustomObject>
    <label>Badge</label>
    <pluralLabel>Badges</pluralLabel>
    <nameField>
        <label>Badge</label>
        <type>AutoNumber</type>
        <displayFormat>BDG-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>