Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Badge__c/fields/Badge_Title__c.field-meta.xml
<CustomField>
    <fullName>Badge_Title__c</fullName>
    <label>Badge Title</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <inlineHelpText>The full title of the Trailhead badge.</inlineHelpText>
</CustomField>