Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Badge__c/fields/Badge_Type__c.field-meta.xml
<CustomField>
    <fullName>Badge_Type__c</fullName>
    <label>Badge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Superbadge</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <inlineHelpText>Category of the Trailhead badge.</inlineHelpText>
</CustomField>