Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Badge__c/fields/Earned_Date__c.field-meta.xml
<CustomField>
    <fullName>Earned_Date__c</fullName>
    <label>Earned Date</label>
    <type>Date</type>
    <inlineHelpText>The date this badge was earned on Trailhead.</inlineHelpText>
</CustomField>