Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Badge__c/fields/Trailhead_Badge_Id__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Badge_Id__c</fullName>
    <label>Trailhead Badge Id</label>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <inlineHelpText>Unique Trailhead identifier used to prevent duplicate badge records.</inlineHelpText>
</CustomField>