Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Badge__c/fields/Trailhead_URL__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_URL__c</fullName>
    <label>Trailhead URL</label>
    <type>Url</type>
    <inlineHelpText>Direct link to this badge on Trailhead.</inlineHelpText>
</CustomField>