Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Badge__c/listViews/Recent_Badges.listView-meta.xml
<ListView>
    <fullName>Recent_Badges</fullName>
    <label>Recent Badges</label>
    <filterScope>Everything</filterScope>
    <columns>Badge_Title__c</columns>
    <columns>Badge_Type__c</columns>
    <columns>Earned_Date__c</columns>
    <columns>Points_Earned__c</columns>
</ListView>