Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Badge__c/listViews/Superbadges_Only.listView-meta.xml
<ListView>
    <fullName>Superbadges_Only</fullName>
    <label>Superbadges Only</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Badge_Type__c</field>
        <operation>equals</operation>
        <value>Superbadge</value>
    </filters>
    <columns>Badge_Title__c</columns>
    <columns>Badge_Type__c</columns>
    <columns>Earned_Date__c</columns>
</ListView>